--- a/common-demo/src/main/resources/application.properties
+++ b/common-demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=common-demo
+spring.datasource.url=jdbc:mysql://localhost/common?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+spring.datasource.username=mcallzbl
+spring.datasource.password=mcallzbl
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
