--- a/common-demo/pom.xml
+++ b/common-demo/pom.xml
@@ -3,12 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.mcallzbl</groupId>
+        <artifactId>common-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.mcallzbl</groupId>
     <artifactId>common-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>common-demo</name>
@@ -53,6 +51,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mcallzbl</groupId>
+            <artifactId>common-user</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
@@ -61,6 +65,16 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
