--- a/common-demo/src/main/resources/application.properties
+++ b/common-demo/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost/common?useUnicode=true&characterEnc
 spring.datasource.username=mcallzbl
 spring.datasource.password=mcallzbl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mail.host=smtp.qcloudmail.com
+spring.mail.port=465
+spring.mail.username=mcallzbl@mail.devillusion.asia
+spring.mail.password=666
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
+
