--- a/common-user/src/main/resources/application.properties
+++ b/common-user/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.url=jdbc:mysql://localhost/common?useUnicode=true&characterEnc
 spring.datasource.username=mcallzbl
 spring.datasource.password=mcallzbl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.database=${REDIS_DB:0}
+spring.mail.host=smtp.qcloudmail.com
+spring.mail.port=465
+spring.mail.username=zeris@info.lingnite.cn
+spring.mail.password=233
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
