--- a/common-demo/src/main/resources/application.properties
+++ b/common-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=common-demo
-spring.datasource.url=jdbc:mysql://localhost/common?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/common?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=mcallzbl
 spring.datasource.password=mcallzbl
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,3 +12,5 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
 
+logging.level.com.mcallzbl.user.mapper=debug
+logging.level.com.baomidou.mybatisplus=debug
