--- a/common-demo/src/main/resources/application.properties
+++ b/common-demo/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
 logging.level.com.mcallzbl.user.mapper=debug
 logging.level.com.baomidou.mybatisplus=debug
+# 阿里云OSS配置
+aliyun.oss.accessKeyId=${ALIYUN_OSS_ACCESS_KEY_ID:}
+aliyun.oss.accessKeySecret=${ALIYUN_OSS_ACCESS_KEY_SECRET:}
+aliyun.oss.endpoint=${ALIYUN_OSS_ENDPOINT:https://oss-cn-beijing.aliyuncs.com}
+aliyun.oss.bucket=${ALIYUN_OSS_BUCKET:yukino-oss}
+aliyun.oss.uploadPath=${ALIYUN_OSS_UPLOAD_PATH:uploads}
+# 阿里云STS配置
+aliyun.sts.roleArn=${ALIYUN_STS_ROLE_ARN:}
+aliyun.sts.region=${ALIYUN_STS_REGION:cn-beijing}
