--- a/common-user/pom.xml
+++ b/common-user/pom.xml
@@ -105,9 +105,10 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Spring Security -->
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 
