实现用户名注册

--- a/common-demo/src/main/resources/application.properties
+++ b/common-demo/src/main/resources/application.properties
@@ -22,3 +22,4 @@ aliyun.oss.uploadPath=${ALIYUN_OSS_UPLOAD_PATH:uploads}
 # 阿里云STS配置
 aliyun.sts.roleArn=${ALIYUN_STS_ROLE_ARN:}
 aliyun.sts.region=${ALIYUN_STS_REGION:cn-beijing}
+app.registration.username-password-enabled=false
