--- a/common-user/src/main/resources/application.properties
+++ b/common-user/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.redis.password=${REDIS_PASSWORD:}
 spring.data.redis.database=${REDIS_DB:0}
 spring.mail.host=smtp.qcloudmail.com
 spring.mail.port=465
-spring.mail.username=zeris@info.lingnite.cn
+spring.mail.username=zeris
 spring.mail.password=233
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
